--- a/tokenization_mecab.ipynb
+++ b/tokenization_mecab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,73 +201,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "def whitespace_tokenize(text):\n",
     "  \"\"\"Runs basic whitespace cleaning and splitting on a piece of text.\"\"\"\n",
     "  text = text.strip()\n",
     "  if not text:\n",
     "    return []\n",
     "  tokens = text.split()\n",
-    "  return tokens\n",
-    "'''"
+    "  return tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'    \\n  def convert_tokens_to_ids(self, tokens):\\n    return convert_by_vocab(self.vocab, tokens)\\n\\n  def convert_ids_to_tokens(self, ids):\\n    return convert_by_vocab(self.inv_vocab, ids)\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class FullTokenizer(object):\n",
     "  \"\"\"Runs end-to-end tokenziation.\"\"\"\n",
     "\n",
-    "  def __init__(self):\n",
+    "  def __init__(self, do_lower_case=True):\n",
     "    # self.vocab = load_vocab(vocab_file)\n",
     "    # self.inv_vocab = {v: k for k, v in self.vocab.items()}\n",
-    "    # self.basic_tokenizer = BasicTokenizer(do_lower_case=do_lower_case)\n",
+    "    self.basic_tokenizer = BasicTokenizer(do_lower_case=do_lower_case)\n",
     "    self.mecab_tokenizer = MecabTokenizer()\n",
     "\n",
     "  def tokenize(self, text):\n",
     "    split_tokens = []\n",
-    "    for token in self.mecab_tokenizer.tokenize(text):\n",
-    "        split_tokens.append(token)\n",
+    "    for token in self.basic_tokenizer.tokenize(text):\n",
+    "      for sub_token in self.mecab_tokenizer.tokenize(token):\n",
+    "        split_tokens.append(sub_token)    \n",
     "        \n",
     "    return split_tokens\n",
     "    \n",
-    "'''    \n",
+    "    \n",
     "  def convert_tokens_to_ids(self, tokens):\n",
     "    return convert_by_vocab(self.vocab, tokens)\n",
     "\n",
     "  def convert_ids_to_tokens(self, ids):\n",
-    "    return convert_by_vocab(self.inv_vocab, ids)\n",
-    "'''    "
+    "    return convert_by_vocab(self.inv_vocab, ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "class BasicTokenizer(object):\n",
     "  \"\"\"Runs basic tokenization (punctuation splitting, lower casing, etc.).\"\"\"\n",
-    "\n",
     "\n",
     "  def __init__(self, do_lower_case=True):\n",
     "    \"\"\"Constructs a BasicTokenizer.\n",
@@ -277,8 +262,7 @@
     "    \"\"\"\n",
     "    self.do_lower_case = do_lower_case\n",
     "\n",
-    "\n",
-    "  def tokenize(self,text):\n",
+    "  def tokenize(self, text):\n",
     "    \"\"\"Tokenizes a piece of text.\"\"\"\n",
     "    text = convert_to_unicode(text)\n",
     "    text = self._clean_text(text)\n",
@@ -295,9 +279,9 @@
     "    orig_tokens = whitespace_tokenize(text)\n",
     "    split_tokens = []\n",
     "    for token in orig_tokens:\n",
-    "      #if self.do_lower_case:\n",
-    "      #  token = token.lower()\n",
-    "      token = self._run_strip_accents(token)\n",
+    "      if self.do_lower_case:\n",
+    "        token = token.lower()\n",
+    "        token = self._run_strip_accents(token)\n",
     "      split_tokens.extend(self._run_split_on_punc(token))\n",
     "\n",
     "    output_tokens = whitespace_tokenize(\" \".join(split_tokens))\n",
@@ -336,7 +320,6 @@
     "\n",
     "  def _clean_text(self, text):\n",
     "    \"\"\"Performs invalid character removal and whitespace cleanup on text.\"\"\"\n",
-    "    \"\"\"텍스트에서 잘못된 문자 제거 및 공백 정리 수행\"\"\"\n",
     "    output = []\n",
     "    for char in text:\n",
     "      cp = ord(char)\n",
@@ -346,58 +329,12 @@
     "        output.append(\" \")\n",
     "      else:\n",
     "        output.append(char)\n",
-    "    return \"\".join(output)\n",
-    "'''  "
+    "    return \"\".join(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "  def _tokenize_chinese_chars(self, text):\n",
-    "    \"\"\"Adds whitespace around any CJK character.\"\"\"\n",
-    "    output = []\n",
-    "    for char in text:\n",
-    "      cp = ord(char)\n",
-    "      if self._is_chinese_char(cp):\n",
-    "        output.append(\" \")\n",
-    "        output.append(char)\n",
-    "        output.append(\" \")\n",
-    "      else:\n",
-    "        output.append(char)\n",
-    "    return \"\".join(output)\n",
-    "    \n",
-    "\n",
-    "  def _is_chinese_char(self, cp):\n",
-    "    \"\"\"Checks whether CP is the codepoint of a CJK character.\"\"\"\n",
-    "    # This defines a \"chinese character\" as anything in the CJK Unicode block:\n",
-    "    #   https://en.wikipedia.org/wiki/CJK_Unified_Ideographs_(Unicode_block)\n",
-    "    #\n",
-    "    # Note that the CJK Unicode block is NOT all Japanese and Korean characters,\n",
-    "    # despite its name. The modern Korean Hangul alphabet is a different block,\n",
-    "    # as is Japanese Hiragana and Katakana. Those alphabets are used to write\n",
-    "    # space-separated words, so they are not treated specially and handled\n",
-    "    # like the all of the other languages.\n",
-    "    if ((cp >= 0x4E00 and cp <= 0x9FFF) or  #\n",
-    "        (cp >= 0x3400 and cp <= 0x4DBF) or  #\n",
-    "        (cp >= 0x20000 and cp <= 0x2A6DF) or  #\n",
-    "        (cp >= 0x2A700 and cp <= 0x2B73F) or  #\n",
-    "        (cp >= 0x2B740 and cp <= 0x2B81F) or  #\n",
-    "        (cp >= 0x2B820 and cp <= 0x2CEAF) or\n",
-    "        (cp >= 0xF900 and cp <= 0xFAFF) or  #\n",
-    "        (cp >= 0x2F800 and cp <= 0x2FA1F)):  #\n",
-    "      return True\n",
-    "\n",
-    "    return False\n",
-    "'''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,6 +343,7 @@
     "\n",
     "  def __init__(self, unk_token=\"[UNK]\", max_input_chars_per_word=200):\n",
     "    self.mecab = Mecab()\n",
+    "    #self.vocab = vocab\n",
     "    self.unk_token = unk_token\n",
     "    self.max_input_chars_per_word = max_input_chars_per_word\n",
     "\n",
@@ -413,28 +351,47 @@
     "  def tokenize(self, text):\n",
     "    text = convert_to_unicode(text)    \n",
     "    mecab_tokens = self.mecab.morphs(text)\n",
+    "\n",
     "    output_tokens = []\n",
-    "    for token in mecab_tokens:\n",
+    "    for token in whitespace_tokenize(text):\n",
     "      chars = list(token)\n",
     "      if len(chars) > self.max_input_chars_per_word:\n",
     "        output_tokens.append(self.unk_token)\n",
     "        continue\n",
     "\n",
-    "      if len(chars) > 1:\n",
-    "        token = \"##\" + token\n",
-    "        \n",
-    "      output_tokens.append(token)   \n",
-    "        \n",
-    "    return output_tokens\n"
+    "      is_bad = False\n",
+    "      start = 0\n",
+    "      sub_tokens = []\n",
+    "      while start < len(chars):\n",
+    "        end = len(chars)\n",
+    "        cur_substr = None\n",
+    "        while start < end:\n",
+    "          substr = \"\".join(chars[start:end])\n",
+    "          if start > 0:\n",
+    "            substr = \"##\" + substr\n",
+    "          if substr in mecab_tokens:\n",
+    "            cur_substr = substr\n",
+    "            break\n",
+    "          end -= 1\n",
+    "        if cur_substr is None:\n",
+    "          is_bad = True\n",
+    "          break\n",
+    "        sub_tokens.append(cur_substr)\n",
+    "        start = end\n",
+    "\n",
+    "      if is_bad:\n",
+    "        output_tokens.append(self.unk_token)\n",
+    "      else:\n",
+    "        output_tokens.extend(sub_tokens)\n",
+    "    return output_tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "def _is_whitespace(char):\n",
     "  \"\"\"Checks whether `chars` is a whitespace character.\"\"\"\n",
     "  # \\t, \\n, and \\r are technically contorl characters but we treat them\n",
@@ -444,17 +401,15 @@
     "  cat = unicodedata.category(char)\n",
     "  if cat == \"Zs\":\n",
     "    return True\n",
-    "  return False\n",
-    "'''"
+    "  return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "def _is_control(char):\n",
     "  \"\"\"Checks whether `chars` is a control character.\"\"\"\n",
     "  # These are technically control characters but we count them as whitespace\n",
@@ -464,17 +419,15 @@
     "  cat = unicodedata.category(char)\n",
     "  if cat in (\"Cc\", \"Cf\"):\n",
     "    return True\n",
-    "  return False\n",
-    "'''  "
+    "  return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "def _is_punctuation(char):\n",
     "  \"\"\"Checks whether `chars` is a punctuation character.\"\"\"\n",
     "  cp = ord(char)\n",
@@ -488,14 +441,15 @@
     "  cat = unicodedata.category(char)\n",
     "  if cat.startswith(\"P\"):\n",
     "    return True\n",
-    "  return False\n",
-    "'''  "
+    "  return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -513,23 +467,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "라 ##토스카 ( ##La ##Tosca ) 는 ##1887 년 에 ##프랑스 ##극작가 ##사르두 가 ##배우 ##사라 ##베르나르 를 ##위해 ##만든 ##작품 이 다 .\n"
+      "라 토스카 ( la tosca ) 는 1887년에 프랑스 극작가 사르두가 배우 사라 베르나르를 위해 만든 작품이다 .\n"
      ]
     }
    ],
    "source": [
-    "mecab_tokenizer = MecabTokenizer()\n",
+    "basic_tokenizer = BasicTokenizer()\n",
     "\n",
-    "output = \" \".join(mecab_tokenizer.tokenize(text))\n",
+    "tok_text = \" \".join(basic_tokenizer.tokenize(text))\n",
+    "output_tokens = whitespace_tokenize(tok_text)\n",
+    "\n",
+    "print(tok_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "라 토스카 ( la tosca ) 는 [UNK] 프랑스 극작가 사르두가 배우 사라 베르나르를 위해 만든 작품이다 .\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_tokenizer = FullTokenizer()\n",
+    "\n",
+    "output = \" \".join(full_tokenizer.tokenize(text))\n",
     "\n",
     "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['라', '토스카', '(', 'La', 'Tosca', ')', '는', '1887', '년', '에', '프랑스', '극작가', '사르두', '가', '배우', '사라', '베르나르', '를', '위해', '만든', '작품', '이', '다', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mecab = Mecab()\n",
+    "mecab_tokens = mecab.morphs(text)\n",
+    "print(mecab_tokens)"
    ]
   },
   {
