--- a/get_keyword.ipynb
+++ b/get_keyword.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'transformers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-acd3a1917585>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcorpus\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mstopwords\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtransformers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBertTokenizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'transformers'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\user\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -24,7 +32,10 @@
     "import numpy as np\n",
     "from nltk.corpus import stopwords \n",
     "\n",
-    "from transformers import BertTokenizer"
+    "from transformers import BertTokenizer\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('stopwords')"
    ]
   },
   {
@@ -97,12 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "class TextRank(object):\n",
-    "    def keywords(self, text, word_num=1):\n",
+    "    def get_keyword(self, text, word_num=1):\n",
     "\n",
     "        tokens = SentenceTokenizer().get_tokens(text)\n",
     "        words_graph, idx2word = GraphMatrix().build_words_graph(tokens)\n",
@@ -124,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['We', 'identify', 'victims', 'massacre', ',', 'find', 'military', 'fired', 'machine-guns', 'helicopters', 'distortion', 'cover-up', 'maneuvering', 'carried', ',', \"''\", 'said', '.', '``', 'The', 'purpose', 'investigation', 'punish', 'responsible', 'people', ',', 'seek', 'reconciliation', 'unity', 'based', 'truth', '.']\n",
-      "['guns']\n"
+      "['identify', 'victims', 'massacre', ',', 'find', 'military', 'fired', 'machine', '-', 'guns', 'helicopters', 'distortion', 'cover', '-', 'maneuver', '##ing', 'carried', ',', '\"', 'said', '.', '\"', 'purpose', 'investigation', 'punish', 'responsible', 'people', ',', 'seek', 'reconciliation', 'unity', 'based', 'truth', '.']\n",
+      "['based']\n"
      ]
     }
    ],
@@ -181,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
